# confluence-workflow

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  cspell.json  mcp_agent.config.yaml  pyproject.toml  pytest.ini
.claude/commands/: confluence-publish.md
.cursor/rules/: 01-format-python.mdc  02-type-check.mdc  03-run-tests.mdc  04-lint-markdown.mdc  05-dependency-management.mdc
.github/workflows/: publish.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-project-scaffolding-and-confluence-api-client/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md  deferred-items.md
.planning/phases/02-markdown-to-confluence-storage-format-converter/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-llm-client-and-comment-preserving-merge/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-cli-command-wiring-and-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-REVIEW.md  04-SECURITY.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-distribution-and-claude-code-skills/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-HUMAN-UAT.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-credential-waterfall-fix/: 06-01-PLAN.md  06-01-SUMMARY.md  06-RESEARCH.md  06-REVIEW.md  06-SECURITY.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-test-scaffold-completion/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-REVIEW-FIX.md  07-REVIEW.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-diagramconfig-waterfall-and-nyquist-compliance/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-PATTERNS.md  08-RESEARCH.md  08-SECURITY.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-convert-waterfall-fix-and-phase-08-verification/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-PATTERNS.md  09-RESEARCH.md  09-REVIEW.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-tech-debt-integration-test-coverage-and-api-cleanup/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-PATTERNS.md  10-RESEARCH.md  10-REVIEW-FIX.md  10-REVIEW.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
skills/confluence-update/: SKILL.md
skills/confluence-upload/: SKILL.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/confluence/: client.rs  mod.rs  types.rs  url.rs
src/confluence_agent/: agent.py  cli.py  config.py  confluence.py  converter.py  llm.py  llm_prompts.py  md2conf.py  models.py  pandoc.py  patched_providers.py  structured_output.py
src/converter/: diagrams.rs  mod.rs  renderer.rs  tests.rs
src/converter/snapshots/: confluence_agent__converter__tests__full_document.snap  confluence_agent__converter__tests__links_images.snap  confluence_workflow__converter__tests__code_blocks.snap  confluence_workflow__converter__tests__edge_cases.snap  confluence_workflow__converter__tests__full_document.snap  confluence_workflow__converter__tests__headings.snap  confluence_workflow__converter__tests__nested_lists.snap  confluence_workflow__converter__tests__tables.snap
src/llm/: mod.rs  types.rs
src/merge/: extractor.rs  injector.rs  matcher.rs  mod.rs
tests/: cli_integration.rs  llm_integration.rs  output_format.rs  test_agent.py  test_cli.py  test_config.py  test_confluence.py  test_converter.py  test_google_generate_structured_chunking.py  test_llm.py  test_llm_prompts.py  test_md2conf.py  test_pandoc.py  test_patched_providers_import_paths.py  test_safe_preview.py
tests/fixtures/: edge_cases.md  frontmatter_document.md  full_document.md  mermaid_diagram.md  plantuml_diagram.md  spike_code_blocks.md  spike_headings.md  spike_links_images.md  spike_nested_lists.md  spike_tables.md  test.md
