[project]
name = "confluence-agent"
version = "0.1.0"
description = "An agentic workflow to update Confluence pages from markdown files."
authors = [
    {name = "Matt Stump", email = "228171+mstump@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp-agent",
    "atlassian-python-api",
    "openai",
    "pydantic-settings",
    "typer",
    "google-generativeai",
]

[project.scripts]
confluence-agent = "confluence_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "trio",
    "pre-commit",
    "mypy",
]

[tool.setuptools]
packages = ["confluence_agent"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "pydantic_settings",
    "mcp_agent.*",
    "atlassian.*",
    "pytest",
    "anyio"
]
ignore_missing_imports = true
