[project]
name = "confluence-agent"
version = "0.1.0"
description = "An agentic workflow to update Confluence pages from markdown files."
authors = [
    {name = "Matt Stump", email = "228171+mstump@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp-agent==0.2.5",
    "openai==2.8.1",
    "pydantic-settings==2.12.0",
    "typer==0.20.0",
    "google-genai==1.52.0",
    "tiktoken==0.8.0",
    "markdown-to-confluence==0.4.8",
]

[project.scripts]
confluence-agent = "confluence_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-anyio==0.0.0",
    "black==25.11.0",
    "trio==0.32.0",
    "pre-commit==4.5.0",
    "mypy==1.18.2",
]

[tool.setuptools]
packages = ["confluence_agent"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
exclude = "tests/"

[[tool.mypy.overrides]]
module = [
    "pydantic_settings",
    "mcp_agent.*",
    "pytest",
    "anyio"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
